@@ -26,11 +26,15 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.25'
     testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'org.mockito:mockito-core:4.8.0'
+    testImplementation 'org.junit-pioneer:junit-pioneer:1.8.0'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
+
+
 
 jar {
     archiveFileName = 'oopt.jar'
